--- a/javascript/CONTENTS/2.md
+++ b/javascript/CONTENTS/2.md
@@ -5,7 +5,7 @@
 
 ```javascript
 function scroll() {
-    if (window.pageYOffset != null) {
+    if (window.pageYOffset) {
         return {
             // 注： ie9+ 高版本浏览器 火狐谷歌等
             left: window.pageXOffset,
