--- a/Javascript/CONTENTS/9.md
+++ b/Javascript/CONTENTS/9.md
@@ -101,7 +101,7 @@ console.log(b instanceof String); // true
 console.log(t instanceof Boolean); // true
 ```
 
-### 还有一种is的方式比如：Array.isArray() 专门用来检测数组 ()
+### 还有一种is的方式比如：Array.isArray() 专门用来检测数组
 
 ```javascript
 console.log(Array.isArray([])); // true
