[update] javascript 10.md

--- a/Javascript/CONTENTS/10.md
+++ b/Javascript/CONTENTS/10.md
@@ -23,4 +23,6 @@ console.log(b.x);
 
 ### 画图说明
 
-<img width='300' src="./screenshot/10.jpeg"/>
+<div align=center>
+    <img width='600' src="./screenshot/10.jpeg"/>  
+</div>
