[add & update & rename] javascript 32 33

--- a/Javascript/CONTENTS/33.md
+++ b/Javascript/CONTENTS/33.md
@@ -1,111 +1,97 @@
-导出Excel功能
+html的head中异步按顺序加载script脚本的兼容写法
 ---
 
-从服务端到浏览器的简单处理
+> 项目需求：客户端有重复的脚本引入，不想在服务端渲染，备注：此需求常见于小公司比较懒的做法。
 
-### 服务端定义一个导出功能的关键代码
+关键代码
 
-Java 定义一个export的功能函数，以下为关键代码（接口中的一部分处理逻辑）：
-
-```java
-@Override
-public byte[] export(String startdate, String enddate, Integer type, String name,
- HttpServletResponse response) {
-    // other logic omitted here ...
-
-    // set response args，it used for open download
-    response.reset();
-    response.setContentType("application/vnd.ms-excel;charset=utf-8");
-    try {
-        response.setHeader("Content-Disposition", "attachment;filename=" + 
-        new String((name+ ".xls").getBytes(), "iso-8859-1"));
-    } catch (UnsupportedEncodingException e) {
-        e.printStackTrace();
-    }
-    ByteArrayOutputStream output = new ByteArrayOutputStream();
-    try {
-        workList.write(output); // write
-    } catch (IOException e) {
-        e.printStackTrace();
-    }
-    return output.toByteArray();
-}
+html 部分
+```html
+<head>
+    <meta charset="UTF-8">
+    <script id="scriptLoader1" src="/js/scriptLoader.js"></script>
+    <script id="scriptLoader2">
+        scriptLoader.init(["./your-script.js"]);
+    </script>
+</head>
 ```
 
-### 前端处理
-
-1) 方式1：使用ng1实现，在自定义指令中来通过接口接收数据流 [ 存在兼容问题的方式 ]
-
-指令如下：
+脚本scriptLoader.js部分：
 
 ```javascript
-angular.module('yourNgApp')
-    .directive('sysExport', function ($http, $document) {
-        return {
-            templateUrl: "app/system/export/export.directive.html",
-            restrict: 'EA',
-            replace: true,
-            scope: {
-                item: '='
-            },
-            link: function (scope, element) {
-                // 访问请求的函数
-                function getExport(postData) {
-                    // 拼出自己的url
-                    var url = '/api/course/export?startdate=' + 
-                    postData.startdate + '&enddate=' + postData.enddate + 
-                    '&type=' + postData.type + '&name=' + postData.name;
-                    // 注意下面的responseType 一定要有哦！
-                    var finalPostData = {
-                        url: url,
-                        method: 'POST',
-                        responseType: "arraybuffer",
-                        headers: {'Content-type': 'application/json'}
-                    };
-                    $http(finalPostData)
-                        .success(function (data) {
-                            var blob, fileName, blobArgs;
-                            blobArgs = {type: 'application/vnd.ms-excel application/x-excel'};
-                            blob = new Blob([data], blobArgs);
-                            var a = $document[0].createElement('a');
-                            a.download = postData.name + '.xls';
-                            a.href = URL.createObjectURL(blob);
-                            a.click();
-                        })
-                        .error(function (e) {
-                            console.log(e);
-                        });
-                }
+// 公用script加载器，避免页面引用代码的冗余
+(function(window) {
+    // 构造函数
+    var ScriptLoader = function() {};
+    var head = document.getElementsByTagName('head')[0]; // 获取head对象
+    // 原型对象
+    ScriptLoader.prototype = {
+        init: function(scriptArr) {
+            // scriptArr 是自定义的数组
 
-                element.on('click', function () {
-                    getExport(scope.item);
-                });
+            // commonScriptArr 是通用script数组 重复引用的脚本
+            var commonScriptArr = [
+                "/lib/your-script-1.min.js",
+                "/lib/your-script-2.min.js",
+                "/lib/your-script-2.min.js",
+                "/lib/your-script-4.min.js",
+                "/lib/your-script-6.min.js"
+            ];
+
+            // 传参处理：如果存在并且类型不是数组，那么提示程序员参数传递错误
+            if (!(scriptArr && typeof scriptArr === 'object' && Array == scriptArr.constructor)) {
+                return alert("请传递数组类型");
             }
-        };
-    });
+
+            // 参数存在且是数组 或者 参数不存在的脚本列表处理
+            var arr = scriptArr ? commonScriptArr.concat(scriptArr) : commonScriptArr; // 加入自定义脚本
+            this.loadScript(arr); // 异步按序添加head中的脚本
+            this.removeSelf(); // 移除自身
+        },
+        // 异步顺序加载
+        loadScript: function(urlArr) {
+            if (!urlArr.length) {
+                return;
+            }
+            var that = this;
+            var script = document.createElement("script"); // 加载 script
+            script.type = "text/javascript";
+            if (script.readyState) {
+                //IE 
+                script.onreadystatechange = function() {
+                    if (script.readyState == "loaded" || script.readyState == "complete") {
+                        script.onreadystatechange = null;
+                        that.loadScript(urlArr);
+                    }
+                };
+            } else {
+                //Others: Firefox, Safari, Chrome, and Opera 
+                script.onload = function() {
+                    that.loadScript(urlArr);
+                };
+            }
+
+            var url = urlArr.splice(0, 1)[0]; // 使用第一个，并且对原数组进行减1操作
+            script.src = url;
+            head.appendChild(script);
+        },
+        // 移除自身脚本
+        removeSelf: function() {
+            var scriptLoader1 = document.getElementById("scriptLoader1");
+            var scriptLoader2 = document.getElementById("scriptLoader2");
+            scriptLoader1 && head.removeChild(scriptLoader1);
+            scriptLoader2 && head.removeChild(scriptLoader2);
+        }
+    }
+    window.scriptLoader = new ScriptLoader(); // 暴露给全局对象
+})(window);
 ```
 
-- 至此可实现通过指令的点击事件来下载excel格式了。 
-- 因为导出功能多用于后台管理，适用性不是很普遍，所以兼容问题可协商，所以前台使用了Blob对象。 
-- 为了节约服务器资源可通过此种方式通过点击来下载，而不是将导出的文件单独存放到服务器上通过返回excel所在的url地址来进行下载。
+scriptLoader.init传入的脚本: your-script.js部分
 
-2）方式2：直接通过a链接访问，［兼容性好］
-
-示例：
-
-```html
-<a href="/api/course/export?startdate={{cl.startdate}}&enddate={{cl.enddate}}&type={{cl.type}}&name={{cl.name}}" class="btn btn-success">导出</a>
+```javascript
+console.log("test);
 ```
 
-### 扩展
-
-- mine 类型： http://www.w3school.com.cn/media/media_mimeref.asp
-- Blob的用法和兼容性：https://developer.mozilla.org/zh-CN/docs/Web/API/Blob
-- Java 端用于导出excel的工具 poi : http://poi.apache.org/      https://github.com/apache/poi
-- 关于 a.download以及它的兼容性 ： http://www.w3school.com.cn/tags/att_a_download.asp
-- 关于 URL.createObjectURL ： https://developer.mozilla.org/zh-CN/docs/Web/API/URL/createObjectURL
-
-### 总结
-
-上面前端用到的都是一些H5高级API 适用性不是很高， 但也临时解决了一些问题，只作为尝试 ：）
-通过a链接的方式请求， 直接在服务器端完成文件的操作，点击后直接下载，兼容良好，但不适合大文件的传输下载。
+然后可以测试加载顺序了，不过这种做法，实际上对大型项目是很不友好的，最好是服务端来做。
+根据项目需求来定，另外，css脚本也同样可以适用此方法，如果存在很多共同的css引用，参考此script的做法。
