--- a/Javascript/CONTENTS/34.md
+++ b/Javascript/CONTENTS/34.md
@@ -8,7 +8,8 @@
 ### Web标准
 
 - html 负责结构、css 负责表现、js 负责行为
-- WEB标准不是某一个标准，而是一系列标准的集合。网页主要由三部分组成：结构（Structure）、表现（Presentation）和行为（Behavior）。
+- WEB标准不是某一个标准，而是一系列标准的集合。
+- 网页主要由三部分组成：结构（Structure）、表现（Presentation）和行为（Behavior）。
 
 ### 网页事件三要素
 
