--- a/Javascript/CONTENTS/53.md
+++ b/Javascript/CONTENTS/53.md
@@ -66,7 +66,7 @@ function getElementsByClassName(classname) {
     return classArr;
 }
 function scroll() {
-    if( window.pageXOffset != null) {
+    if( !window.pageXOffset) {
         return {
             left:window.pageXOffset,
             top:window.pageYOffset
