[test] html5-css3 markdown

--- a/Html5-CSS3/CONTENTS/1.md
+++ b/Html5-CSS3/CONTENTS/1.md
@@ -6,10 +6,10 @@ HTML5 介绍篇
 ### HTML5 的概要内容
 
 1)新增语义化的标签 
-    1.1 html5 更具语义性，新增了很多语义化的标签，这里简要说几个：section、article、nav、aside、header、footer等语义化的目的就是为了写出便于阅读和维护的代码，也更利于搜索引擎的优化。
+    1.1) html5 更具语义性，新增了很多语义化的标签，这里简要说几个：section、article、nav、aside、header、footer等语义化的目的就是为了写出便于阅读和维护的代码，也更利于搜索引擎的优化。
 
 2) 新增DOM选择器 
-    2.1 让选取DOM更简化，如 querySelector,querySelectorAll，进入DOM3时代，支持html5的浏览器对事件处理addEventListener的兼容也会更好。
+    2.1) 让选取DOM更简化，如 querySelector,querySelectorAll，进入DOM3时代，支持html5的浏览器对事件处理addEventListener的兼容也会更好。
 
 3) 新增 Element.classList 
     3.1 元素类的操作，可以对类进行直接操作 
