[update] html5-css3 2

--- a/Html5-CSS3/CONTENTS/1.md
+++ b/Html5-CSS3/CONTENTS/1.md
@@ -5,92 +5,111 @@ HTML5 介绍篇
 
 ### HTML5 的概要内容
 
-1)新增语义化的标签 
-    1.1) html5 更具语义性，新增了很多语义化的标签，这里简要说几个：section、article、nav、aside、header、footer等语义化的目的就是为了写出便于阅读和维护的代码，也更利于搜索引擎的优化。
+一、新增语义化的标签 
+- html5 更具语义性，新增了很多语义化的标签，这里简要说几个：section、article、nav、aside、header、footer等语义化的目的就是为了写出便于阅读和维护的代码，也更利于搜索引擎的优化。
+<br/>
 
-2) 新增DOM选择器 
-    2.1) 让选取DOM更简化，如 querySelector,querySelectorAll，进入DOM3时代，支持html5的浏览器对事件处理addEventListener的兼容也会更好。
+二、新增DOM选择器 
+- 让选取DOM更简化，如 querySelector,querySelectorAll，进入DOM3时代，支持html5的浏览器对事件处理addEventListener的兼容也会更好。
+<br/>
 
-3) 新增 Element.classList 
-    3.1 元素类的操作，可以对类进行直接操作 
-    3.2 如 ele.classList.add(“classname”)，ele.classList.remove(“classname”)，以及ele.classList.toggle(“classname”)等
+三、新增 Element.classList 
+- 元素类的操作，可以对类进行直接操作 
+- 如 ele.classList.add(“classname”)，ele.classList.remove(“classname”)，以及ele.classList.toggle(“classname”)等
+<br/>
 
-4) 新增data-*自定义属性 
-    4.1 这里其实自定义属性早已经普及，不会影响页面布局，但可被浏览器使用，用于存储数据，丰富应用的功能
+四、新增data-*自定义属性 
+- 这里其实自定义属性早已经普及，不会影响页面布局，但可被浏览器使用，用于存储数据，丰富应用的功能
+<br/>
 
-5) 可用性更强的表单(智能表单) 
-    5.1 新增表单功能如：占位符，自动聚焦，模拟进度，自动完成，数据列表等
-    5.2 新增输入类型如：数字，日期，时间，邮件，URL ，颜色和搜索框等。 这样通过表单类型可以决定弹出移动端键盘的类型，也就是虚拟键盘适配。
-    5.3 新增表单元素如：秘钥生成字段<keygen>，表单输出元素<output>，命令菜单列表<menu>、<command>
+五、可用性更强的表单(智能表单) 
+- 新增表单功能如：占位符，自动聚焦，模拟进度，自动完成，数据列表等
+-  新增输入类型如：数字，日期，时间，邮件，URL ，颜色和搜索框等。 这样通过表单类型可以决定弹出移动端键盘的类型，也就是虚拟键盘适配。
+- 新增表单元素如：秘钥生成字段<keygen>，表单输出元素<output>，命令菜单列表<menu>、<command>
+<br/>
 
-6)  SVG 和 音视频技术(多媒体) 
-    6.1 SVG的创建交互
-    6.2 音频、视频、字幕以及全屏API等
+六、SVG 和 音视频技术(多媒体) 
+- 6.1 SVG的创建交互
+- 6.2 音频、视频、字幕以及全屏API等
+<br/>
 
-7) Canvas 
-    7.1 平面2D 绘图
-    7.2 3D WebGL 应用于游戏场景开发
+七、Canvas 
+- 7.1 平面2D 绘图
+- 7.2 3D WebGL 应用于游戏场景开发
+<br/>
 
-8) 移动端手势操作 
-    8.1 移动端事件基本touch事件
-    8.2 模拟手势操作
-    8.3 手势封装库
+八、移动端手势操作 
+- 移动端事件基本touch事件
+- 模拟手势操作
+- 手势封装库
+<br/>
 
-9) 原生拖放 
-    9.1 拖放事件
-    9.2 自定义放置目标、dataTransfer对象
-    9.3 dropEffect 与 effectAllowed对象
-    9.4 可拖动
-    9.5 其他成员
- 
-10) 地理定位(Geolocation API) 
-    10.1 位置信息
-    10.2 HTML5 Geolocation API
-    10.3 隐私
+九、原生拖放 
+- 拖放事件
+- 自定义放置目标、dataTransfer对象
+- dropEffect 与 effectAllowed对象
+- 可拖动
+- 其他成员
+ <br/>
 
-11) 离线应用和客户端存储 
-    11.1 离线检测 navigator.onLine
-    11.2 应用缓存 manifest
-    11.3 数据存储 cookie , sessionStorage，localStorage，Web SQL，Indexed DB
+十、地理定位(Geolocation API) 
+- 位置信息
+- HTML5 Geolocation API
+- 隐私
+<br/>
 
-12) 文件访问 File API 
-    12.1 文件系统API
-    12.2 FileReader
-    12.3 使用 XHR上传文件
+十一、离线应用和客户端存储 
+- 离线检测 navigator.onLine
+- 应用缓存 manifest
+- 数据存储 cookie , sessionStorage，localStorage，Web SQL，Indexed DB
+<br/>
 
-13) 历史访问 History API 
-    13.1 使用History API保存当前位置
-    13.2 使用History API改变URL
-    13.3 只能在同一个域名下工作
-    13.4 利用History API钓鱼
-    13.5 烦人的动画URL
+十二、文件访问 File API 
+- 文件系统API
+- FileReader
+- 使用 XHR上传文件
+<br/>
 
-14) 通信基础API (Communication API) 
-    14.1 跨文档消息通信 postMessage API
-    14.2 XHR2
+十三、历史访问 History API 
+- 使用History API保存当前位置
+- 使用History API改变URL
+- 只能在同一个域名下工作
+- 利用History API钓鱼
+- 烦人的动画URL
+<br/>
 
-15) 实时web技术 
-    15.1 轮询 和 长轮询
-    15.2 事件服务器事件
-    15.3 SSE 数据推送
-    15.4 Web Sockets
-    15.5 Socket.IO
+十四、通信基础API (Communication API) 
+- 跨文档消息通信 postMessage API
+- XHR2
+<br/>
 
-16) 设备信息访问，JS可以访问硬件的一些信息，用于开发App 
-    16.1 网络状态
-    16.2 硬件访问
-    16.3 设备方向
-    16.4 地理围栏
+十五、实时web技术 
+- 轮询 和 长轮询
+- 事件服务器事件
+- SSE 数据推送
+- Web Sockets
+- Socket.IO
+<br/>
 
-17) 多线程 WebWorkers API 
-    17.1 在后台开启线程，处理其他操作
-    17.2 不能操作DOM
-    17.3 出错不可见
+十六、设备信息访问，JS可以访问硬件的一些信息，用于开发App 
+- 网络状态
+- 硬件访问
+- 设备方向
+- 地理围栏
+<br/>
 
-18) 桌面通知 Notification API
-    18.1 Page Visibility API
+十七、多线程 WebWorkers API 
+-  在后台开启线程，处理其他操作
+- 不能操作DOM
+- 出错不可见
+<br/>
 
-19) Web 计时
+十八、桌面通知 Notification API
+- Page Visibility API
+<br/>
+
+十九、Web 计时
+<br/>
 
 ### HTML5 的未来展望
 
