[update] html5-css3 4

--- a/Html5-Css3/CONTENTS/4.md
+++ b/Html5-Css3/CONTENTS/4.md
@@ -279,4 +279,4 @@ html 代码结构：
 
 此元素被除 IE之外的所有主流浏览器支持，在移动端使用时一个很好的选择。
 
-三、其他：还有一些不是很常用的元素包括<meter>、<progress>、<output>、<menu>、<command>等等
+三、其他：还有一些不是很常用的元素包括`<meter>`、`<progress>`、`<output>`、`<menu>`、`<command>` 等等
