[update] html5-css3 13

--- a/Html5-Css3/CONTENTS/13.md
+++ b/Html5-Css3/CONTENTS/13.md
@@ -22,7 +22,7 @@
 
 CSS3在布局方面做了非常大的改进，使得我们对块级元素的布局排列变得十分灵活，适应性非常强，其强大的伸缩性，在响应式开中可以发挥极大的作用。
 
-<img src="https://raw.githubusercontent.com/johnnynode/css-notes/master/pics/3-1.jpg" width=500/>
+<img src='./screenshot/3-1.jpg' width='500'>
 
 - 主轴：Flex容器的主轴主要用来配置Flex项目，默认是水平方向
 - 侧轴：与主轴垂直的轴称作侧轴，默认是垂直方向的
@@ -58,7 +58,6 @@ CSS3 可以将文本内容设计成像报纸一样的多列布局，存在很大
 - column-span	指定元素要跨越多少列
 - column-width	指定列的宽度
 - columns	设置 column-width 和 column-count 的简写
-
 
 ### Web字体
 
