--- a/Javascript/CONTENTS/64.md
+++ b/Javascript/CONTENTS/64.md
@@ -17,7 +17,7 @@
 
 ## 构造模式的实现
 
-```
+```javascript
 function Door(lock,color) {
   this.lock = lock || 'new lock';    
   this.color = color || 'red';
@@ -41,7 +41,7 @@ console.log(res2);
 
 这里模拟AA厂商和BB厂商都造门
 
-```
+```javascript
 // AA 厂商
 var AA = {
   door: function (lock,color) {
