--- a/Javascript/CONTENTS/68.md
+++ b/Javascript/CONTENTS/68.md
@@ -4,7 +4,7 @@
 
 ### 在promise之前处理异步回调的方式
 
-```
+```javascript
 function asyncFun(a,b,callback) {
       setTimeout(function () {
         callback(a+b);
@@ -28,7 +28,8 @@ function asyncFun(a,b,callback) {
 从上面可以看出所谓的"回调地狱"的可怕
 
 ### 使用promise来优雅的处理异步
-```
+
+```javascript
 function asyncFun(a,b) {
   return new Promise(function (resolve, reject) {
     setTimeout(function() {
@@ -59,7 +60,7 @@ asyncFun(1,2)
 
 ### 使用promise处理内部异常的举例
 
-```
+```javascript
 function asyncFun(a,b) {
   return new Promise(function (resolve, reject) {
     // 模拟异常判断
@@ -99,7 +100,7 @@ asyncFun(1,2)
 
 ### 通过catch统一处理错误，通过finally执行最终必须执行的逻辑
 
-```
+```javascript
 function asyncFun(a,b) {
   return new Promise(function (resolve, reject) {
     // 模拟异常判断
@@ -137,7 +138,7 @@ asyncFun(1,2)
 
 ### 通过Promise.all()静态方法来处理多个异步
 
-```
+```javascript
 function asyncFun(a,b) {
   return new Promise(function (resolve, reject) {
     setTimeout(function() {
@@ -154,7 +155,7 @@ promise.then(function (res) {
 
 ### 通过Promise.race()静态方法来获取多个异步中最快的一个
 
-```
+```javascript
 function asyncFun(a,b,time) {
   return new Promise(function (resolve, reject) {
     setTimeout(function() {
@@ -171,7 +172,7 @@ promise.then(function (res) {
 
 ### 通过Promise.resolve() 静态方法来直接返回成功的异步对象
 
-```
+```javascript
 var p = Promise.resolve('hello');
 p.then(function (res) {
   console.log(res); // hello
@@ -180,7 +181,7 @@ p.then(function (res) {
 
 等同于，如下：
 
-```
+```javascript
 var p = new Promise(function (resolve, reject) {
   resolve('hello2');
 })
@@ -191,7 +192,7 @@ p.then(function (res) {
 
 ### 通过Promise.reject() 静态方法来直接返回失败的异步对象
 
-```
+```javascript
 var p = Promise.reject('err')
 p.then(null, function (res) {
   console.log(res); // err
@@ -200,7 +201,7 @@ p.then(null, function (res) {
 
 等同于，如下：
 
-```
+```javascript
 var p = new Promise(function (resolve, reject) {
   reject('err2');
 })
@@ -211,7 +212,7 @@ p.then(null, function (res) {
 
 ### 通过一个小例子来测试Promise在面向对象中应用
 
-```
+```javascript
 'use strict';
 
 class User{
