--- a/Javascript/CONTENTS/69.md
+++ b/Javascript/CONTENTS/69.md
@@ -2,7 +2,7 @@
 
 ### ES6之前对象属性的命名方法
 
-```
+```javascript
 var obj = {
   name:'Joh',
   'my name': 'Johnny'
@@ -13,7 +13,7 @@ console.log(obj['my name']); // Johnny
 
 ### 引入Symbol之后，变量可以不再重复
 
-```
+```javascript
 let name1 = Symbol('name');
 let name2 = Symbol('name');
 console.log(name1 === name2); // false
@@ -23,7 +23,7 @@ console.log(name1 === name2); // false
 
 ### 将Symbol类型转换为字符串类型
 
-```
+```javascript
 let name1 = Symbol('name');
 let name2 = Symbol('name');
 
@@ -46,7 +46,7 @@ console.log(obj[getName]()); // Joh
 
 ### Symbol类型的属性具有一定的隐藏性
 
-```
+```javascript
 let name = Symbol('name');
 let obj = {
   age:22,
@@ -71,7 +71,7 @@ console.log(obj[key]); // Joh
 ### 使用Symbol类型模拟对象的私有属性
 
 User 模块
-```
+```javascript
 'use strict';
 let getName = Symbol('getName');
 
@@ -88,7 +88,7 @@ module.exports = class User {
 
 测试User模块
 
-```
+```javascript
 'use strict';
 
 const User = require('./User');
@@ -101,7 +101,7 @@ user[getName](); // getName is not defined 报错, 可知 Symbol 可以在面向
 
 ### Symbol.for 和 Symbol.keyFor的应用
 
-```
+```javascript
 let name1 = Symbol.for('name');
 let name2 = Symbol.for('name');
 console.log(name1 === name2); // true
@@ -112,7 +112,7 @@ console.log(Symbol.keyFor(name1)); // name 备注：字符串类型的
 
 ### 使用for-of来顺序输出数组的单项
 
-```
+```javascript
 let arr = ['a', 'b', 'c'];
 for(let item of arr) {
   console.log(item); // 顺序输出 a b c
@@ -147,7 +147,7 @@ while(!next.done) {
 
 ### Symbol.iterator在面向对象中的应用实例1：
 
-```
+```javascript
 'use strict';
 
 class UserGroup {
@@ -184,7 +184,7 @@ for (let user of group) {
 
 ### Symbol.iterator在面向对象中的应用实例2：
 
-```
+```javascript
 'use strict';
 
 var obj = {'Joh':'56999', 'Lili':'899888'};
@@ -211,7 +211,7 @@ for (let u of obj) console.log(u);
 
 程序优化之后：
 
-```
+```javascript
 'use strict';
 
 var obj = {'Joh':'56999', 'Lili':'899888'};
@@ -241,7 +241,7 @@ for (let u of obj) console.log(u);
 
 ### Symbol.iterator应用于伪数组中
 
-```
+```javascript
 'use strict';
 
 var obj = {
@@ -268,7 +268,7 @@ for (let i of obj) {
 
 ### 字符串实现了Symbol.iterator接口
 
-```
+```javascript
 'use strict';
 
 console.log('Joh'[Symbol.iterator]); // [Function: [Symbol.iterator]]
