--- a/Javascript/CONTENTS/71.md
+++ b/Javascript/CONTENTS/71.md
@@ -2,7 +2,7 @@
 
 ### set 的值不可重复，数组的值可以重复
 
-```
+```javascript
 let arr = [1,2,3,'5','5'];
 let st = new Set(arr);
 console.log(st); // 可以通过set来去除数组的重复的值，返回的是一个伪数组
@@ -13,7 +13,7 @@ console.log(st.size); // 4
 
 简单的add 与 delete ：
 
-```
+```javascript
 let st = new Set();
 var u = {name:'Joh'};
 st.add(u);
@@ -23,7 +23,7 @@ console.log(bool); // true;
 
 连续add与has的api ：
 
-```
+```javascript
 let st = new Set();
 var u = {name:'Joh'};
 var r = {name:'Lily'};
@@ -36,7 +36,7 @@ console.log(st.has(u)); // true;
 
 clear清空set集合
 
-```
+```javascript
 let st = new Set();
 var u = {name:'Joh'};
 var r = {name:'Lily'};
@@ -47,7 +47,7 @@ console.log(st.size); // 0
 
 ### 通过Array.from方法把类似数组结构的模型转化为数组
 
-```
+```javascript
 let arr = ['xxx', 'yyyy', 'yyyy'];
 let newArr = Array.from(new Set(arr)); 
 console.log(Array.isArray(newArr)); // true
@@ -56,7 +56,7 @@ console.log(newArr); // ["xxx", "yyyy"]
 
 ### Set 原型上的Symbol.iterator 和 values 是同一个值, 可直接for-of遍历
 
-```
+```javascript
 console.log(Set.prototype[Symbol.iterator] === Set.prototype.values); // true
 let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
 for(let k of st) {
@@ -66,7 +66,7 @@ for(let k of st) {
 
 ### set中的keys和values方法
 
-```
+```javascript
     let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
     console.log(st.size); // 3
     let itKeys = st.keys();
@@ -82,7 +82,7 @@ for(let k of st) {
 
 ### set 的entries 实体对象，是个键和值的数组结构
 
-```
+```javascript
 let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
 let entriesIt = st.entries(); // 
 for(let v of entriesIt) {
@@ -92,7 +92,7 @@ for(let v of entriesIt) {
 
 ### 关于NaN在set中的特殊性
 
-```
+```javascript
 let st = new Set();
 console.log(NaN === NaN); // false , 此处 NaN 是不全等的，理应可以添加多个，不算重复，但是这里是个特例
 st.add(NaN).add(NaN).add(NaN);
