--- a/Javascript/CONTENTS/72.md
+++ b/Javascript/CONTENTS/72.md
@@ -2,7 +2,7 @@
 
 ### 初识map
 
-```
+```javascript
 var obj = {
   'name':'Joh',
   qq:'5222',
@@ -24,7 +24,7 @@ Map可以连续set,就像Set可以连续add一样，同样有size的api
 
 ### map 的delete, has方法 
 
-```
+```javascript
 var obj = {
   'name':'Joh',
   qq:'5222',
@@ -52,7 +52,7 @@ console.log(map.size); // 3
 
 ### NaN在map上的特殊性与clear方法
 
-```
+```javascript
 let map = new Map();
 // map 可以连续set
 map
@@ -71,7 +71,7 @@ console.log(map.size); // 0
 
 ### map 的构造函数参数的传递，取值get方法，keys方法，values方法
 
-```
+```javascript
 let map = new Map([
   ['name','Joh'],
   ['age',10]
@@ -97,7 +97,7 @@ for(let v of values) {
 
 ### map与set的原型属性比较和map使用entries方法获得数据的实体
 
-```
+```javascript
 let map = new Map([
   ['name','Joh'],
   ['age',10]
@@ -116,7 +116,7 @@ for (let en of entries) {
 
 ### map内forEach方法和对象传递，以及内部this的使用
 
-```
+```javascript
 let map = new Map([
   ['name','Joh'],
   ['age',10]
