--- a/Git-Github-Linux/CONTENTS/3.md
+++ b/Git-Github-Linux/CONTENTS/3.md
@@ -29,7 +29,7 @@
  `C++ Primer Plus 完整版 中文版 第六版 影印版 无目录 有页数.pdf	Add a 150M pdf file	9 minutes ago` ，
 点击该文件查看，可看到：`147 MB   Stored with Git LFS`
   ② 目前 Git LFS的总存储量为1G左右，超过需要付费。 
-	<div align=center>
+	<div>
         <img width='700' src="./screenshot/1.png"/>  
     </div>
   ③ 小伙伴们快来试试吧 ！
