[update] git-github-linux 3

--- a/Git-Github-Linux/CONTENTS/3.md
+++ b/Git-Github-Linux/CONTENTS/3.md
@@ -17,7 +17,7 @@
 - 突破github限制，支持单个文件超出100M (使用 [Git LFS](https://github.com/git-lfs/git-lfs))
   * 这也是无意中浏览解决问题的方案时看到的 [有关Google Maps SDK的问题](http://www.modeo.co/blog/2016/2/22/google-maps-ios-file-too-large) 
     这里给了我们一个很好的处理方案： **Git LFS** 全名为：Git Large File Storage
-  * Git LFS的官方网址在这里： https://git-lfs.github.com/，官网上有很详细的说明，现在来简单说下使用方式：先安装 Git LFS 的客户端，然后在将要push的仓库里重新打开一个bash命令行：
+  * Git LFS的官方网址在这里： [https://git-lfs.github.com/](https://git-lfs.github.com/)，官网上有很详细的说明，现在来简单说下使用方式：先安装 Git LFS 的客户端，然后在将要push的仓库里重新打开一个bash命令行：
      - 只需设置1次 LFS : `git lfs install`
      - 然后 跟踪一下你要push的大文件的文件或指定文件类型 `git lfs track "*.pdf"`  ， 当然还可以直接编辑.gitattributes文件
      - 以上已经设置完毕， 其余的工作就是按照正常的 add , commit , push 流程就可以了 : 
@@ -33,11 +33,12 @@
             点击该文件查看，可看到：`147 MB   Stored with Git LFS`
     * ② 目前 Git LFS的总存储量为1G左右，超过需要付费。 
 
-	<div>
-        <img width='700' src="./screenshot/1.png"/>  
-    </div>
+        <div>
+            <img width='700' src="./screenshot/1.png"/>  
+        </div>
 
     * ③ 小伙伴们快来试试吧 ！
+
 
 > _**其他知识点**_：
 > 
