[update] git-github-linux 3

--- a/Git-Github-Linux/CONTENTS/3.md
+++ b/Git-Github-Linux/CONTENTS/3.md
@@ -1,9 +1,9 @@
- >偶尔把几本电子书传到github上，其中一本关于c++的有147M（在本地磁盘占用了150M空间），使用普通的方式，最终会被github 服务器拒绝。在github 官网上也有了相关说明，具体请查看：
- >
+偶尔把几本电子书传到github上，其中一本关于c++的有147M（在本地磁盘占用了150M空间），使用普通的方式，最终会被github 服务器拒绝。在github 官网上也有了相关说明，具体请查看：
+
 1. https://help.github.com/articles/working-with-large-files/
 2. https://help.github.com/articles/conditions-for-large-files/
 
->简单的说，github 会在你上传文件大于50M的时候，给予警告 ; 大于100M的时候给出 server reject（拒绝上传）
+简单的说，github 会在你上传文件大于50M的时候，给予警告 ; 大于100M的时候给出 server reject（拒绝上传）
 
 #### 解决方案
 
