[update] git-github-linux 7

--- a/Git-Github-Linux/CONTENTS/7.md
+++ b/Git-Github-Linux/CONTENTS/7.md
@@ -12,11 +12,11 @@
     <div>
 
 - 将数据克隆到本地之后：
-  * 首先会生成一个origin/master的引用指向最新的提交c2，这个orgin/master 就是远程跟踪分支，用户只读。
+  * 首先会生成一个origin/master的引用指向最新的提交c2，这个orgin/master 就是远程跟踪分支，用户只读。<br>
     <div>
         <img src='./screenshot/3.png' />
     <div>
- * 然后根据origin/master 生成一个master分支指向同一个提交c2, 如下：
+  * 然后根据origin/master 生成一个master分支指向同一个提交c2, 如下：<br>
     <div>
         <img src='./screenshot/4.png' />
     <div>
@@ -29,14 +29,14 @@
     <div>
 
 - 通过git push 命令会对远程和本地都作出修改
- * 修改远程的master指向至c3，如下图所示：
-    <div>
-        <img src='./screenshot/6.png' />
-    <div>
- * 修改本地的origin/master分支指向c3，如下图所示
-    <div>
-        <img src='./screenshot/7.png' />
-    <div>
+    * 修改远程的master指向至c3，如下图所示：<br>
+        <div>
+            <img src='./screenshot/6.png' />
+        <div>
+    * 修改本地的origin/master分支指向c3，如下图所示: <br>
+        <div>
+            <img src='./screenshot/7.png' />
+        <div>
 
 ### 关于checkout 的操作
 
@@ -60,6 +60,7 @@
 ### 通过git merge origin/master合并本地分支
 
 - 备注：可以merge的前提是在无冲突的状态下，有冲突要手动解决
+
 - merge之后，master分支指向c4, 如下图：
     <div>
         <img src='./screenshot/10.png' />
@@ -68,15 +69,19 @@
 ### 通过git pull获取同步最新数据
 
 - 备注：前提是没有冲突，有冲突手动解决
-- git pull 之前的状态：远程在c4, 本地在c32
+
+- git pull 之前的状态：远程在c4, 本地在c3
     <div>
         <img src='./screenshot/11.png' />
     <div>
+
 - git pull 之后的状态：本地仓库更新了origin/master,将其指向c4; 然后更新master分支, 将其指向c4
     <div>
         <img src='./screenshot/12.png' />
     <div>
+
 - git pull = git fetch + git merge
+
 - git pull --rebase = git fetch + git rebase
 
 ### 更新版本建议的操作
