[update] git-github-linux 7

--- a/Git-Github-Linux/CONTENTS/7.md
+++ b/Git-Github-Linux/CONTENTS/7.md
@@ -12,11 +12,11 @@
     <div>
 
 - 将数据克隆到本地之后：
-  * 首先会生成一个origin/master的引用指向最新的提交c2，这个orgin/master 就是远程跟踪分支，用户只读。<br>
+  * 首先会生成一个origin/master的引用指向最新的提交c2，这个orgin/master 就是远程跟踪分支，用户只读。<br><br>
     <div>
         <img src='./screenshot/3.png' />
     <div>
-  * 然后根据origin/master 生成一个master分支指向同一个提交c2, 如下：<br>
+  * 然后根据origin/master 生成一个master分支指向同一个提交c2, 如下：<br><br>
     <div>
         <img src='./screenshot/4.png' />
     <div>
@@ -29,11 +29,11 @@
     <div>
 
 - 通过git push 命令会对远程和本地都作出修改
-    * 修改远程的master指向至c3，如下图所示：<br>
+    * 修改远程的master指向至c3，如下图所示：<br><br>
         <div>
             <img src='./screenshot/6.png' />
         <div>
-    * 修改本地的origin/master分支指向c3，如下图所示: <br>
+    * 修改本地的origin/master分支指向c3，如下图所示: <br><br>
         <div>
             <img src='./screenshot/7.png' />
         <div>
