--- a/nodejs/contents/8.md
+++ b/nodejs/contents/8.md
@@ -6,7 +6,7 @@
 
 首先分别处理不同方式的请求：
 
-```
+```javascript
 const http = require('http');
 const url = require('url');
 const querystring = require('querystring');
@@ -66,7 +66,7 @@ module.exports.start = start;
 
 路由列表模块：
 
-```
+```javascript
 const homeCtrl = require('../controller/home');
 const editCtrl = require('../controller/edit');
 const addCtrl = require('../controller/add');
@@ -125,7 +125,7 @@ module.exports = {
 
 路由判断模块：
 
-```
+```javascript
 const fs = require('fs');
 const url = require('url');
 const routerList = require('./list');
@@ -155,7 +155,7 @@ module.exports = router;
 
 ### 静态文件服务器的实现
 
-```
+```javascript
 // 处理静态文件服务器
 
 const fs = require('fs');
@@ -185,7 +185,7 @@ module.exports = staticServer;
 
 ### model中对实体对象的增删查改的方法
 
-```
+```javascript
 let musicList = require('./data');
 
 class Music {
@@ -259,7 +259,7 @@ module.exports = new Music();
 
 举例post形式的添加功能
 
-```
+```javascript
 const music = require('../model/music');
 
 class Add {
