--- a/nodejs/contents/7.md
+++ b/nodejs/contents/7.md
@@ -1,4 +1,4 @@
-> path 相关的一些api, 我们首先创建一段公共的代码块 :
+path 相关的一些api, 我们首先创建一段公共的代码块 :
 
 ```javascript
   "use strict";
@@ -13,21 +13,23 @@
     console.log(path.basename(_path,'.txt')); // test 此处不包含后缀
 	```
 - path.delimiter (分隔符)
-<br>
-在*nix系统上的环境变量为`:`， 如下举例子：
-  ```javascript
-	console.log(process.env.PATH) // '/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin'
-    process.env.PATH.split(path.delimiter) // returns ['/usr/bin', '/bin', '/usr/sbin', '/sbin', '/usr/local/bin']
-    
-  ```
-  在window上的环境变量是 `;` 举例如下：
-  ```javascript
-	console.log(process.env.PATH) 
-	// 'C:\Windows\system32;C:\Windows;C:\Program Files\node\'
 
-  process.env.PATH.split(path.delimiter)
-    // returns ['C:\\Windows\\system32', 'C:\\Windows', 'C:\\Program Files\\node\\']
-  ```
+    在*nix系统上的环境变量为`:`， 如下举例子：
+
+    ```javascript
+        console.log(process.env.PATH) // '/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin'
+        process.env.PATH.split(path.delimiter) // returns ['/usr/bin', '/bin', '/usr/sbin', '/sbin', '/usr/local/bin']
+        
+    ```
+
+  在window上的环境变量是 `;` 举例如下：
+
+    ```javascript
+        console.log(process.env.PATH) 
+        // 'C:\Windows\system32;C:\Windows;C:\Program Files\node\'
+        process.env.PATH.split(path.delimiter)
+        // returns ['C:\\Windows\\system32', 'C:\\Windows', 'C:\\Program Files\\node\\']
+    ```
 
 - path.dirname (输出文件所在文件夹路径)
 
@@ -92,25 +94,25 @@
 - path.normalize (使路径正常化，处理`..`和`.` 以及多余的 `/`)
 
     ```javascript
-    path.normalize('/foo/bar//baz/asdf/quux/..')
-    // returns '/foo/bar/baz/asdf'
+        path.normalize('/foo/bar//baz/asdf/quux/..')
+        // returns '/foo/bar/baz/asdf'
     ```
 
 - path.parse (解析字符串路径成对象)
 
     ```javascript  
-    // *nix 下
-    path.parse('/home/user/dir/file.txt')
-    /*
-        // returns
-        {
-            root : "/",
-            dir : "/home/user/dir",
-            base : "file.txt",
-            ext : ".txt",
-            name : "file"
-        }
-    */
+        // *nix 下
+        path.parse('/home/user/dir/file.txt')
+        /*
+            // returns
+            {
+                root : "/",
+                dir : "/home/user/dir",
+                base : "file.txt",
+                ext : ".txt",
+                name : "file"
+            }
+        */
 
         // windows 下
         path.parse('C:\\path\\dir\\index.html')
@@ -131,8 +133,7 @@
 
   Provide access to aforementioned path methods but always interact in a posix compatible way.
   
-  官方文档上说了： 提供接入path的方法，但总能够以可移植的适配方式来交互。
-具体用法可在repl环境中输出这个path.posix对象来尝试。
+  官方文档上说了： 提供接入path的方法，但总能够以可移植的适配方式来交互。 具体用法可在repl环境中输出这个path.posix对象来尝试。
 
 - path.relative (获取一个路径对于另一个的相对路径)
 
@@ -154,7 +155,7 @@
         
     ```
 
- 上面获得的结果相当于下面的shell命令获得的路径 , 最终都是 `/temp/subfile`
+    上面获得的结果相当于下面的shell命令获得的路径 , 最终都是 `/temp/subfile`
 
     ```shell
         cd foo/bar
@@ -164,7 +165,7 @@
         pwd
     ```
 
- 和 shell 命令的不同之处是 resolve 可以是不存在的，也可以是文件，如下：
+    和 shell 命令的不同之处是 resolve 可以是不存在的，也可以是文件，如下：
 
     ```javascript
         path.resolve('wwwroot', 'static_files/png/', '../gif/image.gif')
@@ -187,5 +188,5 @@
 
 - path.win32 (此API不常用)
 
-  Provide access to aforementioned path methods but always interact in a win32 compatible way. <br><br>
-  提供接入上述path方法，但总在win32系统上以适配的方式交互。（存在局限性，不常用）
+    Provide access to aforementioned path methods but always interact in a win32 compatible way. <br><br>
+    提供接入上述path方法，但总在win32系统上以适配的方式交互。（存在局限性，不常用）
