--- a/workflow-builder-debugger/contents/3.md
+++ b/workflow-builder-debugger/contents/3.md
@@ -10,7 +10,9 @@
 
    项目结构模型为：
    
- ![这里写图片描述](http://img.blog.csdn.net/20170126112454324?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvVHlyb19qYXZh/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+ <div align=center>
+    <img width='700' src="./screenshot/1.jpeg"/>  
+</div>
 
   deploy为项目部署用所在目录，src为开发模式源代码目录
   
