--- a/workflow-builder-debugger/contents/4.md
+++ b/workflow-builder-debugger/contents/4.md
@@ -18,7 +18,7 @@
 
 通过安装几个加载器来举例说明：
 
-#### babel-loader 
+#### 1. babel-loader 
 
 - 安装 $ `npm i --save-dev babel-loader babel-core babel-preset-es2015 babel-preset-react`
 
@@ -39,7 +39,7 @@
     }
  ```
 
-#### sass-loader
+#### 2. sass-loader
 
 用于处理sass文件
   
@@ -53,7 +53,7 @@
     }
   ```
 
-####  url-loader
+####  3. url-loader
 
 用于处理图片的引用关系，大图片直接引用，小图片会转成base64文件
 
@@ -70,7 +70,7 @@
 
     说明： limit代表以字节为单位的图片在10000字节的时候会打包到bundle.js中，超出会进行图片地址的引用。name参数代表将打包的文件放入哪个文件夹下。
 
-#### file-loader
+#### 4. file-loader
 
 具体用法在这里： [github-file-loader](https://github.com/webpack/file-loader) 多用于移动文件使用
 
