[update] react-native 1

--- a/mobile/contents/react-native/contents/1.md
+++ b/mobile/contents/react-native/contents/1.md
@@ -42,4 +42,4 @@ Fix babel-preset-react-native TransformError
 
 ### __总结__
 
-- 在发布新包的时候，需要进行严格测试，否则可能会造成大量用户的终端出现问题，从而导致在github上开issue的冲动 ...
+- 在发布新包的时候，需要进行严格测试，否则可能会造成大量用户的终端出现问题，从而导致在github上开issue的冲动
