[update] ionic 10 README

--- a/mobile/contents/ionic/contents/10.md
+++ b/mobile/contents/ionic/contents/10.md
@@ -1,16 +1,16 @@
-> 在维护老项目的时候找到了解决方案，以前对ionic签名都是 $ `cordova build --release android` (备注: 命令中的红色Android是小写的)，然后再使用jarsigner命令签名，太麻烦了。查阅之前的方式，详情请看之前的[这篇博客](http://blog.csdn.net/tyro_java/article/details/72871390#t2)，我们说下更为方便的方法，使用自己的keystore直接安装到手机。
+> 在维护老项目的时候找到了解决方案，以前对ionic签名都是 $ `cordova build --release android` (备注: 命令中的红色Android是小写的)，然后再使用jarsigner命令签名，太麻烦了。查阅之前的方式，详情请看之前的[这篇文章](/3.md#应用签名安卓)，我们说下更为方便的方法，使用自己的keystore直接安装到手机。
 
 
 ## __步骤__ 
 - 切换到安卓项目根目录下：$ `cd platforms/android`
-- 将自己的keystore文件拷贝到上面目录中。生成keystore方法请查阅[之前博客](http://blog.csdn.net/tyro_java/article/details/72871390#t2)
+- 将自己的keystore文件拷贝到上面目录中。生成keystore方法请查阅[之前文章](./3.md#应用签名安卓)
 - 在目录中新建文件, 名为：release-signing.properties, 然后编辑该文件，加入如下内容
  ```
     storeFile=yourkeystore.keystore
     key.store.password=yourPassword
     key.alias=yourKeystoreAlias
     key.alias.password=yourPassword
- ```
+```
   说明：① storeFile的值是你keystore的名称注意带有后缀keystore   ② key.store.password 和 key.alias.password的值是你签名时需要输入的密码  ③ key.alias的值就是你的keystore的别名。
 
 - 生成带有自己keystore的apk: $ `cordova build android --release`  （直接生成包）
